@@ -128,6 +128,8 @@ wxGTK:
 - Fix wxNO_BORDER style for wxRadioBox (David Hart)
 - wxComboBox::SetValue() doesn't emit EVT_TEXT anymore
 - Fix wxTextCtrl::GetLineText() for empty lines (Marcin Wojdyr)
+- Support wxTEXT_ALIGNMENT_JUSTIFIED in wxTextCtrl if GTK+ version is at
+  least 2.11 (Mart Raudsepp).
 
 wxMac:
 
